[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/MovingCamera.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 520, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 300 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 512, 300 )

[node name="MovingCamera" type="Camera2D"]
position = Vector2( 513, 301 )
current = true
limit_smoothed = true
smoothing_enabled = true
editor_draw_screen = false
script = ExtResource( 1 )

[node name="BorderBottom" type="StaticBody2D" parent="."]
position = Vector2( -1, 300 )
collision_layer = 2048
collision_mask = 1024
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BorderBottom"]
shape = SubResource( 1 )

[node name="BorderTop" type="StaticBody2D" parent="."]
position = Vector2( -1, -300 )
collision_layer = 2048
collision_mask = 1024
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BorderTop"]
shape = SubResource( 1 )

[node name="BorderLeft" type="StaticBody2D" parent="."]
position = Vector2( -512, 0 )
collision_layer = 2048
collision_mask = 1024
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BorderLeft"]
shape = SubResource( 2 )

[node name="BorderRight" type="StaticBody2D" parent="."]
position = Vector2( 512, 0 )
collision_layer = 2048
collision_mask = 1024
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BorderRight"]
shape = SubResource( 2 )

[node name="Screen" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4116

[node name="CollisionShape2D" type="CollisionShape2D" parent="Screen"]
visible = false
shape = SubResource( 3 )
[connection signal="area_exited" from="Screen" to="." method="_on_Screen_area_exited"]
[connection signal="body_entered" from="Screen" to="." method="_on_Screen_body_entered"]
[connection signal="body_exited" from="Screen" to="." method="_on_Screen_body_exited"]
